# Teaching-Software-Analysis

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  env.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish-arm.yml  docker-publish.yml  svf-teaching.yml
Assignment-1/: Assignment-1.cpp  Assignment-1.h  CMakeLists.txt  Test1.cpp  Test1.h
Assignment-1/test-exes/: Test.cpp  test1.graph.txt  test2.graph.txt  test3.graph.txt
Assignment-2/: Assignment-2.cpp  Assignment-2.h  CMakeLists.txt  Test2.cpp  Test2.h
Assignment-2/test-exes/: Test.cpp
Assignment-2/testCases/: test1.c
Assignment-2/testcase/: compile.sh
Assignment-2/testcase/bc/: test1.ll  test2.ll  test3.ll
Assignment-2/testcase/dot/: icfg_test1.dot  icfg_test2.dot  test1.ll.icfg.dot  test2.ll.icfg.dot  test3.ll.icfg.dot
Assignment-2/testcase/src/: test1.c  test2.c  test3.c
Assignment-3/: Assignment-3.cpp  Assignment-3.h  CMakeLists.txt  Test3.cpp  Test3.h  test.cpp
Assignment-3/Tests/: SrcSnk.txt
Assignment-3/Tests/testcases/icfg/: test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll
Assignment-3/Tests/testcases/pta/: test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll
Assignment-3/Tests/testcases/taint/: test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll
Assignment-3/testcase/bc/: CI-global.ll  CI-local.ll  no_alias.ll
Assignment-3/testcase/dot/: CI-global.dot  CI-global_final.dot  CI-global_init.dot  CI-local.dot  CI-local_final.dot  no_alias.dot  no_alias_final.dot
Assignment-3/testcase/src/: CI-global.c  CI-local.c  no_alias.c
Assignment-4/: Assignment-4.cpp  Assignment-4.h  CMakeLists.txt  SrcSnk.txt  Test4.cpp  Z3Mgr.cpp  Z3Mgr.h  Z3SSEMgr.cpp  Z3SSEMgr.h  test-sse.cpp
Assignment-4/Tests/testcases/sse/: test1.c  test1.ll  test2.c  test3.c  test3.ll
Assignment-4/testcase/bc/: test1.ll  test2.ll  test3.ll  test4.ll
Assignment-4/testcase/src/: test1.c  test2.c  test3.c  test4.c
CodeGraph/: CMakeLists.txt  CodeGraph.cpp  compile.sh
CodeGraph/graph/: swap_icfg.dot  swap_pag.dot
CodeGraph/src/: example.c  swap.c
HelloWorld/: CMakeLists.txt  hello.cpp
slides/: SVF_Teaching-Assignment 2.textClipping
src/: CMakeLists.txt  svf-ex.cpp
